--- a/Home.css
+++ b/Home.css
@@ -83,7 +83,6 @@
 
 .u-section-2 .u-list-1 {
   grid-template-rows: repeat(1, auto);
-  width: 1140px;
   margin: -77px auto 0;
 }
 
@@ -174,7 +173,6 @@
 }
 
 .u-section-2 .u-repeater-2 {
-  grid-auto-columns: 12.5%;
   grid-template-columns: repeat(8, 12.5%);
   min-height: 145px;
   grid-gap: 0px;
@@ -318,7 +316,8 @@
 
 @media (max-width: 1199px) {
   .u-section-2 .u-list-1 {
-    width: 940px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-2 .u-repeater-1 {
@@ -456,45 +455,30 @@
 }
 
 @media (max-width: 991px) {
-  .u-section-2 .u-list-1 {
-    width: 720px;
-  }
-
   .u-section-2 .u-repeater-1 {
     grid-template-columns: repeat(2, calc(50% - 15.5px));
     min-height: 404px;
   }
 
   .u-section-2 .u-repeater-2 {
-    grid-auto-columns: 25%;
     min-height: 368px;
     grid-template-columns: repeat(4, 25%);
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-2 .u-list-1 {
-    width: 540px;
-  }
-
   .u-section-2 .u-repeater-2 {
-    grid-auto-columns: 50%;
     min-height: 2251px;
     grid-template-columns: repeat(2, 50%);
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-2 .u-list-1 {
-    width: 340px;
-  }
-
   .u-section-2 .u-repeater-1 {
     grid-template-columns: 100%;
   }
 
   .u-section-2 .u-repeater-2 {
-    grid-auto-columns: 100%;
     grid-template-columns: 100%;
   }
 }
